minicrud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minicrud
spec:
  replicas: 1
  selector:
    matchLabels:
        app: minicrud
  template:
    metadata:
      labels:
        app: minicrud
    spec:
      containers:
      - name: minicrud
        image: vetalalien/minicrud:v1
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 3
