minicrud-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minicrud
  labels:
    app: minicrud
spec:
  type: NodePort
  ports:
   - port: 8000
     nodePort: 31667
  selector:
   app: minicrud
